implements images (and create a css file for tests)

--- a/tests/index.html
+++ b/tests/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>cazanjs tests</title>
+    <link rel="stylesheet" href="/style.css">
     <script src="/app.js" type="module"></script>
 </head>
 <body>
 
-    <canvas id="game" width="500" height="500" style="border: 1px solid #000"></canvas>
-
+<canvas id="game"></canvas>
 </body>
 </html>
