--- a/tests/index.html
+++ b/tests/index.html
@@ -4,8 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>cazanjs tests</title>
-    <link rel="stylesheet" href="/style.css">
     <script src="/app.js" type="module"></script>
+    <style>
+        html, body {
+            width:  100%;
+            height: 100%;
+            margin: 0;
+        }
+
+        /* Center #game canvas */
+        #game {
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+
+            border : 1px solid black;
+        }
+    </style>
 </head>
 <body>
     <canvas id="game"></canvas>
