implement cazan popups (prompt, show, confirm) + features (style customization, using by IO interface or by your own) + some fixes

--- a/tests/index.html
+++ b/tests/index.html
@@ -20,8 +20,16 @@
             transform: translate(-50%, -50%);
 
             border : 1px solid black;
+            z-index: 100;
         }
     </style>
+    <!-- remove comments here to custom cazan popup style -->
+    <!--<style id="cazan-popup-style">
+        #cazan-popup{
+            background: #000;
+            color: #fff;
+        }
+    </style>-->
 </head>
 <body>
     <canvas id="game"></canvas>
